--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello World, This is my first website.</h1>
     <p>The edited text!</p>
+    <h2>Hello guys I'm heading two!</h2>
 </body>
 </html>
