--- a/index.html
+++ b/index.html
@@ -4,11 +4,185 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Creative Agency Website</title>
 </head>
 <body>
-    <h1>Hello World, This is my first website.</h1>
-    <p>The edited text!</p>
-    <h2>Hello guys I'm heading two!</h2>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="logo"><img src="images/logo.png" alt="Logo"></div>
+                <nav class="main-nav">
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Feature</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <div class="slider">
+        <img src="images/slider-img.jpg" alt="Slider">
+    </div>
+    <section class="services">
+        <div class="container">
+            <div class="row">
+                <div class="service-item">
+                    <div class="s_icon">
+                        <img src="images/s_icon_one.png" alt="Service Icon">
+                    </div>
+                    <h3>Great Ideas</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, inventore, illum et optio consectetur facilis accusamus repellendus voluptates, iusto aperiam rem quisquam corporis minima! Autem pariatur eveniet itaque iusto totam.</p>
+                </div>
+                <div class="service-item">
+                        <div class="s_icon">
+                            <img src="images/s_icon_two.png" alt="Service Icon">
+                        </div>
+                        <h3>Great Ideas</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, inventore, illum et optio consectetur facilis accusamus repellendus voluptates, iusto aperiam rem quisquam corporis minima! Autem pariatur eveniet itaque iusto totam.</p>
+                </div>
+                <div class="service-item">
+                        <div class="s_icon">
+                            <img src="images/s_icon_three.png" alt="Service Icon">
+                        </div>
+                        <h3>Great Ideas</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, inventore, illum et optio consectetur facilis accusamus repellendus voluptates, iusto aperiam rem quisquam corporis minima! Autem pariatur eveniet itaque iusto totam.</p>
+                </div>
+                <div class="service-item">
+                        <div class="s_icon">
+                            <img src="images/s_icon_four.png" alt="Service Icon">
+                        </div>
+                        <h3>Great Ideas</h3> 
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, inventore, illum et optio consectetur facilis accusamus repellendus voluptates, iusto aperiam rem quisquam corporis minima! Autem pariatur eveniet itaque iusto totam.</p>
+                    </div>
+            </div>
+        </div>
+    </section>
+    <section class="company-overview">
+        <div class="container">
+            <div class="row">
+                <h2>Company Overview</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum voluptatem repudiandae ea, consectetur vel quae exercitationem! Asperiores a eum debitis voluptas hic repellendus magnam tempora obcaecati, accusantium, laudantium sint. Natus!</p>
+                <h5>Let's Start Today</h5>
+                <a href="#">View More</a>
+            </div>
+        </div>
+    </section>
+    <section class="feature-work">
+        <h2>Feature Work</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore nisi ea, quaerat cupiditate</p>
+        <div class="feature-work-wrapper">
+            <div class="cat-links">
+                <ul>
+                    <li><a href="">All</a></li>
+                    <li><a href="">Website</a></li>
+                    <li><a href="">Logo & Branding</a></li>
+                    <li><a href="">Graphic Design</a></li>
+                    <li><a href="">Online Marketing</a></li>
+                    <li><a href="">Video</a></li>
+                </ul>
+            </div>
+            <div class="feature-work-items">
+                <img src="images/p_item_1.jpg" alt="Feature Item">
+                <img src="images/p_item_2.jpg" alt="Feature Item">
+                <img src="images/p_item_3.jpg" alt="Feature Item">
+                <img src="images/p_item_4.jpg" alt="Feature Item">
+                <img src="images/p_item_5.jpg" alt="Feature Item">
+                <img src="images/p_item_6.jpg" alt="Feature Item">
+                <img src="images/p_item_7.jpg" alt="Feature Item">
+                <img src="images/p_item_8.jpg" alt="Feature Item">
+            </div>
+        </div>
+    </section>
+    <section class="about-us">
+        <div class="container">
+            <div class="row">
+                <div class="about-us-left">
+                    <h2>About us</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eligendi deserunt ex inventore, ullam repellendus corporis accusamus obcaecati mollitia optio voluptatibus, amet veritatis? Vitae corrupti, vel fugiat deserunt illum in.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit nesciunt in incidunt modi fuga iusto officiis enim omnis ad ipsam hic maiores repudiandae voluptatum qui, dignissimos at perspiciatis libero possimus?</p>
+                    <a href="#">Read More</a>
+                </div>
+                <div class="about-us-right">
+                    <img src="images/about_us_image.jpg" alt="About us Image">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="testimonial">
+        <div class="container">
+            <div class="row">
+                <div class="t_item">
+                    <img src="images/testimonial-img.png" alt="testimonial image">
+                    <h4>Michel Jonsmith</h4>
+                    <h5>Company Director</h5>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit ratione iure aliquid a sit facere adipisci ex aperiam sequi corrupti obcaecati, vel maiores inventore labore excepturi quo provident debitis quos!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="blog">
+        <div class="container">
+            <div class="row">
+                <div class="blog-top-content">
+                    <h2>Blog</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum rem veniam repellendus dolor natus harum aperiam enim</p>
+                </div>
+                <div class="blog-post-item">
+                    <img src="images/blog_img_1.jpg" alt="Blog Image">
+                    <h4>Blog Post title</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem dolore minima illo quibusdam non reprehenderit adipisci ad! Eos illo, iusto dolores quo eligendi numquam beatae recusandae id nihil debitis dolorem?</p>
+                </div>
+                <div class="blog-post-item">
+                    <img src="images/blog_img_2.jpg" alt="Blog Image">
+                    <h4>Blog Post title</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem dolore minima illo quibusdam non reprehenderit adipisci ad! Eos illo, iusto dolores quo eligendi numquam beatae recusandae id nihil debitis dolorem?</p>
+                </div>
+                <div class="blog-post-item">
+                    <img src="images/blog_img_3.jpg" alt="Blog Image">
+                    <h4>Blog Post title</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem dolore minima illo quibusdam non reprehenderit adipisci ad! Eos illo, iusto dolores quo eligendi numquam beatae recusandae id nihil debitis dolorem?</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="contact">
+        <div class="contact-top-content">
+            <h2>Contact Us</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum rem veniam repellendus dolor natus harum aperiam enim</p>
+        </div>
+        <div class="contact-form">
+            <form action="#">
+                <input type="text" name="name" id="name" placeholder="Name: ">
+                <input type="email" name="email" id="email" placeholder="Email ">
+                <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
+                <input type="submit" value="Send Message">
+            </form>
+        </div>
+        <div class="contact-info">
+            <p>Phone: 000-0000-00</p>
+            <p>Addpress: Dhaka, Bangladesh.</p>
+            <h5>Customer Support</h5>
+            <p>Phone: 00-000-00</p>
+            <p>www.website.com</p>
+        </div>
+        <footer>
+            <div class="copyright-text">
+                <p>Website copyright text</p>
+            </div>
+            <div class="social-icon">
+                <ul>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                    <li><a href=""></a></li>
+                </ul>
+            </div>
+            
+        </footer>
+    </section>
 </body>
 </html>
