--- a/index.html
+++ b/index.html
@@ -27,8 +27,15 @@
             </div>
         </div>
     </header>
-    <div class="slider">
-        <img src="images/slider-img.jpg" alt="Slider">
+    <div class="hero-section">
+        <div class="container">
+            <div class="row">
+                <div class="hero-heading">
+                    <h2>WE’RE AN CREATIVE DESIGN <br/>
+                        & DEVELOPMENT AGENCY</h2>
+                </div>
+            </div>
+        </div>        
     </div>
     <section class="services">
         <div class="container">
@@ -70,13 +77,13 @@
                 <h2>Company Overview</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum voluptatem repudiandae ea, consectetur vel quae exercitationem! Asperiores a eum debitis voluptas hic repellendus magnam tempora obcaecati, accusantium, laudantium sint. Natus!</p>
                 <h5>Let's Start Today</h5>
-                <a href="#">View More</a>
+                <a class="viewmorebtn" href="#">View More</a>
             </div>
         </div>
     </section>
     <section class="feature-work">
         <h2>Feature Work</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore nisi ea, quaerat cupiditate</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilla. sed do eiusmod tempor incididunt</p>
         <div class="feature-work-wrapper">
             <div class="cat-links">
                 <ul>
@@ -89,14 +96,14 @@
                 </ul>
             </div>
             <div class="feature-work-items">
-                <img src="images/p_item_1.jpg" alt="Feature Item">
-                <img src="images/p_item_2.jpg" alt="Feature Item">
-                <img src="images/p_item_3.jpg" alt="Feature Item">
-                <img src="images/p_item_4.jpg" alt="Feature Item">
-                <img src="images/p_item_5.jpg" alt="Feature Item">
-                <img src="images/p_item_6.jpg" alt="Feature Item">
-                <img src="images/p_item_7.jpg" alt="Feature Item">
-                <img src="images/p_item_8.jpg" alt="Feature Item">
+                <div class="work-item"><img src="images/p_item_1.jpg" alt="Feature Item"></div>
+                <div class="work-item"><img src="images/p_item_2.jpg" alt="Feature Item"></div>
+                <div class="work-item"><img src="images/p_item_3.jpg" alt="Feature Item"></div>
+                <div class="work-item"><img src="images/p_item_4.jpg" alt="Feature Item"></div>
+                <div class="work-item"><img src="images/p_item_5.jpg" alt="Feature Item"></div>
+                <div class="work-item"><img src="images/p_item_6.jpg" alt="Feature Item"></div>
+                <div class="work-item"><img src="images/p_item_7.jpg" alt="Feature Item"></div>
+                <div class="work-item"><img src="images/p_item_8.jpg" alt="Feature Item"></div>
             </div>
         </div>
     </section>
